--- a/DataFirst/DataFirst.csproj
+++ b/DataFirst/DataFirst.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>BarnardTech.DataFirst</AssemblyName>
     <RootNamespace>BarnardTech.DataFirst</RootNamespace>
+    <Version>1.1.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0-preview1.19504.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
